--- a/release-task/package.json
+++ b/release-task/package.json
@@ -7,7 +7,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "azure-pipelines-task-lib": "^4.16.0"
